# from-tools-to-mcp

./: README.md  function_call.py  pyproject.toml  server.py
