[project]
name = "learn-mcp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "baggiponte", email = "57922983+baggiponte@users.noreply.github.com" }
]
requires-python = ">=3.14"
dependencies = [
    "fastmcp>=3.1.0",
    "openai>=2.24.0",
]

[build-system]
requires = ["uv_build>=0.10.7,<0.11.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "marimo>=0.20.4",
    "ruff>=0.15.4",
]
